# api_rust

./: Cargo.toml  docker-compose.yml  env-exemple
migrations/2021-12-31-095057_create_users/: up.sql
src/: error_handler.rs  main.rs  schema.rs
src/posts/: model.rs  routes.rs
src/users/: model.rs  routes.rs
