[package]
name = "api_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = "1.0.132"
actix-rt = "1"
listenfd = "0.3.5"
serde_json = "1.0.73"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
rust-argon2 = "0.8.3"
rand = "0.8.4"
jsonwebtoken = "7"
chrono = "0.4.19"